# ktool-es

./: LICENSE  README.md  pyproject.toml  report.md  salida.json
examples/: ejecutar_demo.sh  ejemplo.txt  lexicon_es_min.txt
scripts/: build_cooc_db_es.py  build_lexicon_es.py
src/ktool_es/: cli.py  nlp.py  pipeline.py  resources.py
src/ktool_es.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
